--- a/src/index.scss
+++ b/src/index.scss
@@ -42,6 +42,8 @@
   padding: 0;
   font-family: "Rubik", sans-serif;
   font: inherit; /* force styling of type through styling, rather than elements */
+
+  color: var(--white);
 }
 
 /* responsive images/videos */
