--- a/src/index.scss
+++ b/src/index.scss
@@ -41,7 +41,7 @@
   margin: 0;
   padding: 0;
   font-family: "Rubik", sans-serif;
-  font: inherit; /* force styling of type through styling, rather than elements */
+  // font: inherit; /* force styling of type through styling, rather than elements */
 
   color: var(--white);
 }
