--- a/src/UI/Underline.module.scss
+++ b/src/UI/Underline.module.scss
@@ -1,18 +1,20 @@
 .line {
   position: relative;
+  transform: rotate(45deg);
+  text-decoration: underline var(--blue);
 
-  &::after {
-    position: absolute;
-    content: "";
-    border: 3px solid var(--blue);
-    background-color: var(--blue);
+  // &::after {
+  //   position: absolute;
+  //   content: "";
+  //   border: 3px solid var(--blue);
+  //   background-color: var(--blue);
 
-    height: 1px;
-    width: 100%;
+  //   height: 1px;
+  //   width: 50%;
 
-    left: 0.25em;
-    bottom: -0.15em;
+  //   left: 0.25em;
+  //   bottom: -0.15em;
 
-    transform: rotate(1deg);
-  }
+  //   transform: rotate(1deg);
+  // }
 }
