--- a/src/Components/MainSection.module.scss
+++ b/src/Components/MainSection.module.scss
@@ -16,6 +16,15 @@
 
   img {
     width: 50%;
+    animation: App-logo-spin infinite 20s linear;
+  }
+  @keyframes App-logo-spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
   }
 
   h1 {
