Adding portfolio and project components
Adding the structure for the protfolio. add the first project with its styles.

--- a/src/Components/MainSection/Skills/Skills.module.scss
+++ b/src/Components/MainSection/Skills/Skills.module.scss
@@ -16,7 +16,7 @@
     list-style-image: url("../../../assets/circle.svg");
 
     li {
-      font-size: var(--fs-semi-medium);
+      font-size: var(--fs-medium);
       font-weight: var(--fw-medium);
 
       div {
