--- a/src/UI/Button.module.scss
+++ b/src/UI/Button.module.scss
@@ -1,9 +1,18 @@
 .button {
+  display: flex;
+  justify-content: center;
+  min-width: 117px;
+
+  font-size: var(--fs-smaller);
+  font-weight: var((--fw-bold));
+
   color: black;
   background-color: var(--white);
 
   border: none;
   border-radius: 10px;
 
-  padding: 0.75em 0.8125em;
+  padding: 1em;
+
+  text-decoration: none;
 }
