styling the form and contact components

--- a/src/Components/MainSection/Skills/Skills.module.scss
+++ b/src/Components/MainSection/Skills/Skills.module.scss
@@ -17,7 +17,7 @@
 
     li {
       font-size: var(--fs-medium);
-      font-weight: var(--fw-medium);
+      font-weight: var(--fw-regular);
 
       div {
         font-size: var(--fs-small);
