--- a/src/Components/Portfolio/Project.module.scss
+++ b/src/Components/Portfolio/Project.module.scss
@@ -28,7 +28,7 @@
 
     p {
       font-size: var(--fs-medium);
-      font-weight: var(--fw-medium);
+      font-weight: var(--fw-regular);
     }
     span {
       font-size: var(--fs-small);
