--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -1,6 +1,5 @@
 .header {
-  padding: 0.75em 1em;
+  padding-block: 0.75em 1em;
 
   border-bottom: 2px solid var(--white);
-  padding-bottom: 1em;
 }
