changing the skills in three columns
add media query at 768px

--- a/src/Components/MainSection/Skills/Skills.module.scss
+++ b/src/Components/MainSection/Skills/Skills.module.scss
@@ -24,6 +24,12 @@
         font-weight: var(--fw-light);
       }
     }
+
+    @media (min-width: 768px) {
+      & {
+        grid-template-columns: 1fr 1fr 1fr;
+      }
+    }
   }
 
   .line {
