Making the page side margin bigger
adding a media query at 768px

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,4 +12,10 @@ html {
   gap: 4.875em;
 
   margin-inline: 0.625em;
+
+  @media (min-width: 768px) {
+    & {
+      margin-inline: 3.125em;
+    }
+  }
 }
