Changing the projects images to desktop version
using react-responsive library to switch the project images to desktop version at 768px

--- a/src/Components/Contact/Contact.module.scss
+++ b/src/Components/Contact/Contact.module.scss
@@ -19,7 +19,7 @@
     display: grid;
     width: min(95%, 25em);
 
-    padding: 1.6875em 1em;
+    padding: 1em 1em 1.6875em 1em;
 
     border: 1px solid var(--white);
     border-radius: 10px;
