--- a/src/Components/Portfolio/Project.module.scss
+++ b/src/Components/Portfolio/Project.module.scss
@@ -17,7 +17,6 @@
     border-radius: 10px;
     img {
       width: 20em;
-      border-radius: 10px;
     }
 
     @media (min-width: 768px) {
@@ -26,6 +25,7 @@
         background-color: transparent;
         img {
           width: 100%;
+          border-radius: 10px;
         }
       }
     }
@@ -50,5 +50,11 @@
   .buttons {
     display: flex;
     justify-content: space-between;
+
+    @media (min-width: 768px) {
+      & {
+        justify-content: space-evenly;
+      }
+    }
   }
 }
