--- a/src/UI/Button.module.scss
+++ b/src/UI/Button.module.scss
@@ -1,9 +1,9 @@
 .button {
   display: flex;
   justify-content: center;
-  min-width: 117px;
+  min-width: 130px;
 
-  font-size: var(--fs-smaller);
+  font-size: var(--fs-small);
   font-weight: var((--fw-bold));
 
   color: black;
@@ -12,7 +12,7 @@
   border: none;
   border-radius: 10px;
 
-  padding: 1em;
+  padding: 0.9375em 1.6875em;
 
   text-decoration: none;
 }
