Change the skills font size at 1024px

--- a/src/Components/MainSection/Skills/Skills.module.scss
+++ b/src/Components/MainSection/Skills/Skills.module.scss
@@ -23,6 +23,14 @@
         font-size: var(--fs-small);
         font-weight: var(--fw-light);
       }
+
+      @media (min-width: 1024px) {
+        font-size: var(--fs-large);
+
+        div {
+          font-size: var(--fs-semi-medium);
+        }
+      }
     }
 
     @media (min-width: 600px) {
