Changing the projects layout to two columns at 1024px

--- a/src/Components/Portfolio/Project.module.scss
+++ b/src/Components/Portfolio/Project.module.scss
@@ -52,9 +52,10 @@
     justify-content: space-between;
 
     @media (min-width: 768px) {
-      & {
-        justify-content: space-evenly;
-      }
+      justify-content: space-evenly;
+    }
+    @media (min-width: 1024px) {
+      margin-top: auto;
     }
   }
 }
