--- a/src/Components/Portfolio/Project.module.scss
+++ b/src/Components/Portfolio/Project.module.scss
@@ -45,6 +45,16 @@
       font-size: var(--fs-small);
       font-weight: var(--fw-light);
     }
+
+    @media (min-width: 768px) {
+      p {
+        font-size: var(--fs-semi-medium);
+      }
+
+      span {
+        font-size: var(--fs-medium);
+      }
+    }
   }
 
   .buttons {
