--- a/src/UI/Button.module.scss
+++ b/src/UI/Button.module.scss
@@ -1,9 +1,9 @@
 .button {
   display: flex;
   justify-content: center;
-  min-width: 130px;
+  min-width: 117px;
 
-  font-size: var(--fs-small);
+  font-size: var(--fs-smaller);
   font-weight: var((--fw-bold));
 
   color: black;
@@ -12,7 +12,13 @@
   border: none;
   border-radius: 10px;
 
-  padding: 0.9375em 1.6875em;
+  padding: 1em;
 
   text-decoration: none;
+
+  @media (min-width: 768px) {
+    font-size: var(--fs-small);
+    min-width: 130px;
+    padding: 0.9375em 1.6875em;
+  }
 }
