--- a/src/Components/Contact/Contact.module.scss
+++ b/src/Components/Contact/Contact.module.scss
@@ -1,8 +1,7 @@
 .container {
   display: flex;
-  align-items: center;
-
   flex-direction: column;
+  align-items: center;
 
   gap: 4.125em;
 
@@ -38,9 +37,32 @@
       font-size: var(--fs-small);
       font-weight: var(--fw-regular);
     }
+
     .button {
       margin: auto;
       margin-top: 1.8125em;
+    }
+  }
+
+  .planet {
+    display: grid;
+    gap: 4.125em;
+    text-align: center;
+  }
+
+  @media (min-width: 1024px) {
+    flex-direction: row;
+    justify-content: space-around;
+
+    .email {
+      font-size: var(--fs-semi-medium);
+    }
+
+    .form {
+      input,
+      textarea {
+        font-size: var(--fs-medium);
+      }
     }
   }
 }
