--- a/src/Components/Portfolio/Project.module.scss
+++ b/src/Components/Portfolio/Project.module.scss
@@ -65,6 +65,7 @@
       justify-content: space-evenly;
     }
     @media (min-width: 1024px) {
+      justify-content: space-between;
       margin-top: auto;
     }
   }
