Adding hover effect for buttons

--- a/src/Components/Contact/Contact.module.scss
+++ b/src/Components/Contact/Contact.module.scss
@@ -38,9 +38,12 @@
       font-weight: var(--fw-regular);
     }
 
+    textarea {
+      margin-bottom: 1.8125em;
+    }
+
     .button {
       margin: auto;
-      margin-top: 1.8125em;
     }
   }
 
