--- a/src/UI/Social.module.scss
+++ b/src/UI/Social.module.scss
@@ -6,7 +6,14 @@
 
   .social {
     display: flex;
-
     gap: 2.5em;
+
+    img {
+      transition: transform 0.5s ease;
+      &:hover,
+      &:focus {
+        transform: scale(1.5);
+      }
+    }
   }
 }
