--- a/src/UI/Social.module.scss
+++ b/src/UI/Social.module.scss
@@ -4,6 +4,10 @@
   justify-content: space-between;
   align-items: center;
 
+  .logo {
+    cursor: pointer;
+  }
+
   .social {
     display: flex;
     gap: 2.5em;
