--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@
   --dark-gray: rgba(53, 53, 53, 1);
   --gray: rgba(149, 149, 149, 1);
   --white: rgba(255, 255, 255, 1);
+  --error: rgba(255, 83, 83, 1);
 
   // Body Copy
 
