--- a/src/Components/Experience/Experience.module.scss
+++ b/src/Components/Experience/Experience.module.scss
@@ -11,6 +11,7 @@
     font-weight: var(--fw-regular);
 
     .content {
+      position: relative;
       display: grid;
       gap: 0.125em;
     }
@@ -22,5 +23,48 @@
   }
   .current {
     list-style-image: url(../../assets/circle-white.svg);
+  }
+
+  @keyframes pulse-animation {
+    0% {
+      transform: translate(-50%, -50%) scale(0);
+      opacity: 0.8;
+    }
+    70% {
+      opacity: 0;
+      transform: translate(-50%, -50%) scale(3);
+    }
+    to {
+      transform: translate(-50%, -50%) scale(0);
+      opacity: 0;
+    }
+  }
+
+  .pulse:before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    background: var(--white);
+    border-radius: 100%;
+    opacity: 0.5;
+    transform: translate(-50%, -50%) scale(3);
+    animation: pulse-animation 3s infinite;
+  }
+
+  .pulse {
+    position: absolute;
+    vertical-align: 1px;
+    width: 12px;
+    height: 11px;
+    left: -0.75em;
+    top: 0.375em;
+
+    color: transparent;
+    border-radius: 100%;
+    flex: 0 0 auto;
+    animation: opacity-animation 1s linear;
   }
 }
