--- a/src/Components/Experience/Experience.module.scss
+++ b/src/Components/Experience/Experience.module.scss
@@ -14,6 +14,31 @@
       position: relative;
       display: grid;
       gap: 0.125em;
+
+      cursor: pointer;
+
+      .timeMore {
+        display: flex;
+        justify-content: space-between;
+
+        .collapseBtn {
+          display: flex;
+          align-items: center;
+          gap: 0.5em;
+
+          border: 0;
+          background-color: transparent;
+          color: var(--gray);
+
+          .arrow {
+            transition: all ease 0.5s;
+          }
+
+          .rotate {
+            transform: rotate(180deg);
+          }
+        }
+      }
     }
 
     .small {
@@ -22,9 +47,7 @@
     }
 
     .description {
-      display: grid;
-      gap: 0.25em;
-      padding-top: 0.25em;
+      margin-top: 0.25em;
 
       span {
         color: var(--gray);
